# OpenPVScope

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  restart.cmd  restart.ps1
backend/: Dockerfile  pyproject.toml
backend/native_nms/: pyproject.toml  setup.py
backend/openpvscope/: __init__.py  console.py  desktop.py  io_atomic.py  settings.py  workflow.py
backend/openpvscope/alignment/: __init__.py  core.py
backend/openpvscope/api/: app.py
backend/openpvscope/detection/: __init__.py  deskew.py  grid.py  jobs.py  pipeline.py  refine.py  refine_border.py  refine_fill.py  refine_grid.py  spatial_nms.cpp  spatial_nms_fast.py  template_match.py
backend/openpvscope/domain/: __init__.py  models.py
backend/openpvscope/exports/: __init__.py
backend/openpvscope/geo/: __init__.py  crs.py
backend/openpvscope/ingest/: __init__.py  geotiff.py
backend/openpvscope/ml/: __init__.py
backend/openpvscope/opensfm/: __init__.py  runner.py
backend/openpvscope/photogrammetry/: __init__.py  odx.py  odx_install.py  opencl.py  setup.py
backend/openpvscope/project/: __init__.py  history.py  paths.py  store.py
backend/openpvscope/segmentation/: __init__.py  extract.py  jobs.py  labels.py  pairing.py  thermal_color.py
backend/openpvscope/static/: index.html
backend/openpvscope/thermal/: __init__.py  dji.py  dji_convert.py  (+3 more)
backend/tests/: test_core.py  test_detection_segmentation.py  test_dji_thermal.py  test_odx.py  test_odx_install.py  test_photo_setup.py  test_refine_and_crops.py  test_thermal_color.py  test_thermal_only_pipeline.py
(+62 files in other folders)
