[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpvscope"
version = "0.1.0"
description = "End-to-end solar PV inspection: photos to anomaly outputs"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Miro Rava" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  "rasterio>=1.3.10",
  "scikit-image>=0.22.0",
  "opencv-python-headless>=4.8.0",
  "pyproj>=3.6.0",
  "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.5"]
desktop = ["pywebview>=5.0"]

[project.scripts]
openpvscope = "openpvscope.desktop:main"

[tool.hatch.build.targets.wheel]
packages = ["openpvscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
